--- a/config/git/config
+++ b/config/git/config
@@ -1,8 +1,9 @@
+# Default in case i am not in any of the directories specified
 [user]
 	name = fushiii
 	email = fushitheimortal@gmail.com
 
-[includeIf "gitdir:~/Developments/personal/"]
-  path = ~/.gitconfig-personal
-[includeIf "gitdir:~/Developments/work/"]
-  path = ~/.gitconfig-work
+[includeIf "gitdir:~/code/personal/"]
+  path = ./gitconfig-personal
+[includeIf "gitdir:~/code/work/"]
+  path = ./gitconfig-work
