--- a/config/neofetch/config.conf
+++ b/config/neofetch/config.conf
@@ -4,21 +4,21 @@ print_info() {
     #info title
     #info underline
 
-    info "OS\t\t" distro 
+    info "OS\t" distro 
     info "Host\t" model 
     #info "Kernel" kernel
     info "Uptime\t" uptime 
     info "Packages\t" packages 
     info "Shell\t" shell 
     #info "Resolution" resolution
-    info "DE\t\t" de 
-    info "WM\t\t" wm 
+    info "DE\t" de 
+    info "WM\t" wm 
     #info "WM Theme" wm_theme
     #info "Theme" theme
     #info "Icons" icons
     #info "Terminal" term
     #info "Terminal Font" term_font
-    info "CPU\t\t" cpu 
+    info "CPU\t" cpu 
     #info "GPU\t\t" gpu 
     info "Memory\t" memory 
 
