--- a/config/hypr/lib/keybinds.conf
+++ b/config/hypr/lib/keybinds.conf
@@ -5,7 +5,7 @@ $mainMod = SUPER
 bind = $mainMod, Return, exec, footclient
 bind = $mainMod, C, killactive, 
 bind = $mainMod, Space, togglefloating, 
-bind = $mainMod, D, exec, wofi --show drun
+bind = $mainMod, D, exec, wofi --show drun --conf ~/.config/hypr/config/wofi/config --style ~/.config/hypr/config/wofi/style.css
 
 bind = $mainMod SHIFT, J, togglesplit, # dwindle
 bind = $mainMod SHIFT, Q, exit, 
