feat: some changes in hypr, bump

--- a/config/hypr/lib/keybinds.conf
+++ b/config/hypr/lib/keybinds.conf
@@ -2,7 +2,7 @@
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
 
-bind = $mainMod, Return, exec, footclient
+bind = $mainMod, Return, exec, foot
 bind = $mainMod, C, killactive, 
 bind = $mainMod, Space, togglefloating, 
 bind = $mainMod, D, exec, wofi --show drun --conf ~/.config/hypr/config/wofi/config --style ~/.config/hypr/config/wofi/style.css
