--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -10,24 +10,7 @@ source = ./lib/keybinds.conf
 # Theming
 source = ./lib/theming/default.conf
 
-dwindle {
-    # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
-    pseudotile = yes # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
-    preserve_split = yes # you probably want this
-}
-
-master {
-    # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-    new_is_master = true
-}
-
-# This is pretty good.
-# Give it a look later
-gestures {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    workspace_swipe = off
-}
-
 # Auto start
-exec = eww open bar --config ~/.config/hypr/config/eww # The config bar
-exec = hyprpaper
+exec-once = hyprpaper
+exec-once = configure-gtk
+exec-once = eww open bar --config ~/.config/hypr/config/eww
