feat: fix in config location for hypr

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -1,3 +1,9 @@
+# Variables
+
+$mainMod = SUPER
+$ewwConfig = ~/.config/hypr/config/eww
+$wofiConfig = ~/.config/hypr/config/wofi
+
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=,preferred,auto,auto
 
@@ -10,7 +16,5 @@ source = ./lib/keybinds.conf
 # Theming
 source = ./lib/theming/default.conf
 
-# Auto start
 exec-once = hyprpaper
-exec-once = configure-gtk
-exec-once = eww open bar --config ~/.config/hypr/config/eww
+exec-once = eww open bar --config $ewwConfig
