--- a/config/hypr/lib/keybinds.conf
+++ b/config/hypr/lib/keybinds.conf
@@ -1,16 +1,50 @@
+# WM Controls
 
-# See https://wiki.hyprland.org/Configuring/Keywords/ for more
-$mainMod = SUPER
+bind = $mainMod, C, killactive, 
+bind = $mainMod, F, fullscreen
+bind = $mainMod SHIFT, Q, exit, 
+bind = $mainMod, Space, togglefloating, 
+
+# Move focus with vim binds
+bind = $mainMod, h, movefocus, l
+bind = $mainMod, l, movefocus, r
+bind = $mainMod, k, movefocus, u
+bind = $mainMod, j, movefocus, d
+
+# Move/resize windows with mouse
+bindm = $mainMod, mouse:272, movewindow
+bindm = $mainMod, mouse:273, resizewindow
+
+# Switch workspaces with mainMod + [0-9]
+bind = $mainMod, 1, exec, hyprctl dispatch workspace 1 ; eww update active-tag=1 --config $ewwConfig
+bind = $mainMod, 2, exec, hyprctl dispatch workspace 2 ; eww update active-tag=2 --config $ewwConfig
+bind = $mainMod, 3, exec, hyprctl dispatch workspace 3 ; eww update active-tag=3 --config $ewwConfig
+bind = $mainMod, 4, exec, hyprctl dispatch workspace 4 ; eww update active-tag=4 --config $ewwConfig
+bind = $mainMod, 5, exec, hyprctl dispatch workspace 5 ; eww update active-tag=5 --config $ewwConfig
+bind = $mainMod, 6, exec, hyprctl dispatch workspace 6 ; eww update active-tag=6 --config $ewwConfig
+bind = $mainMod, 7, exec, hyprctl dispatch workspace 7 ; eww update active-tag=7 --config $ewwConfig
+bind = $mainMod, 8, exec, hyprctl dispatch workspace 8 ; eww update active-tag=8 --config $ewwConfig
+bind = $mainMod, 9, exec, hyprctl dispatch workspace 9 ; eww update active-tag=9 --config $ewwConfig
+
+# Move active window to a workspace with mainMod + SHIFT + [0-9]
+
+bind = $mainMod SHIFT, 1, exec, hyprctl dispatch movetoworkspace 1 ; eww update active-tag=1 --config $ewwConfig
+bind = $mainMod SHIFT, 2, exec, hyprctl dispatch movetoworkspace 2 ; eww update active-tag=2 --config $ewwConfig
+bind = $mainMod SHIFT, 3, exec, hyprctl dispatch movetoworkspace 3 ; eww update active-tag=3 --config $ewwConfig
+bind = $mainMod SHIFT, 4, exec, hyprctl dispatch movetoworkspace 4 ; eww update active-tag=4 --config $ewwConfig
+bind = $mainMod SHIFT, 5, exec, hyprctl dispatch movetoworkspace 5 ; eww update active-tag=5 --config $ewwConfig
+bind = $mainMod SHIFT, 6, exec, hyprctl dispatch movetoworkspace 6 ; eww update active-tag=6 --config $ewwConfig
+bind = $mainMod SHIFT, 7, exec, hyprctl dispatch movetoworkspace 7 ; eww update active-tag=7 --config $ewwConfig
+bind = $mainMod SHIFT, 8, exec, hyprctl dispatch movetoworkspace 8 ; eww update active-tag=8 --config $ewwConfig
+bind = $mainMod SHIFT, 9, exec, hyprctl dispatch movetoworkspace 9 ; eww update active-tag=9 --config $ewwConfig
+
+# Launchers
 
 bind = $mainMod, Return, exec, foot
-bind = $mainMod, C, killactive, 
-bind = $mainMod, Space, togglefloating, 
-bind = $mainMod, D, exec, wofi --show drun --conf ~/.config/hypr/config/wofi/config --style ~/.config/hypr/config/wofi/style.css
+bind = $mainMod, D, exec, wofi --show drun --conf $wofiConfig/config --style $wofiConfig/style.css
 
-bind = $mainMod SHIFT, J, togglesplit, # dwindle
-bind = $mainMod SHIFT, Q, exit, 
 
-# Change volume level
+# Levels control ( Volume, brightness...)
 
 bind =  $mainMod, F9,  exec, pamixer --togle-mute
 binde = $mainMod, F10, exec, pamixer --decrease 5
@@ -19,36 +53,3 @@ binde = $mainMod, F11, exec, pamixer --increase 5
 # Change device brightness
 binde = $mainMod, F3, exec, brightnessctl set 5%-
 binde = $mainMod, F4, exec, brightnessctl set +5%
-
-# Move focus with vim binds
-bind = $mainMod, h, movefocus, l
-bind = $mainMod, l, movefocus, r
-bind = $mainMod, k, movefocus, u
-bind = $mainMod, j, movefocus, d
-
-# Switch workspaces with mainMod + [0-9]
-bind = $mainMod, 1, exec, ~/.config/hypr/scripts/change-workspace 1
-bind = $mainMod, 2, exec, ~/.config/hypr/scripts/change-workspace 2
-bind = $mainMod, 3, exec, ~/.config/hypr/scripts/change-workspace 3
-bind = $mainMod, 4, exec, ~/.config/hypr/scripts/change-workspace 4
-bind = $mainMod, 5, exec, ~/.config/hypr/scripts/change-workspace 5
-bind = $mainMod, 6, exec, ~/.config/hypr/scripts/change-workspace 6
-bind = $mainMod, 7, exec, ~/.config/hypr/scripts/change-workspace 7
-bind = $mainMod, 8, exec, ~/.config/hypr/scripts/change-workspace 8
-bind = $mainMod, 9, exec, ~/.config/hypr/scripts/change-workspace 9
-
-# Move active window to a workspace with mainMod + SHIFT + [0-9]
-
-bind = $mainMod SHIFT, 1, exec, ~/.config/hypr/scripts/move-workspace 1
-bind = $mainMod SHIFT, 2, exec, ~/.config/hypr/scripts/move-workspace 2
-bind = $mainMod SHIFT, 3, exec, ~/.config/hypr/scripts/move-workspace 3
-bind = $mainMod SHIFT, 4, exec, ~/.config/hypr/scripts/move-workspace 4
-bind = $mainMod SHIFT, 5, exec, ~/.config/hypr/scripts/move-workspace 5
-bind = $mainMod SHIFT, 6, exec, ~/.config/hypr/scripts/move-workspace 6
-bind = $mainMod SHIFT, 7, exec, ~/.config/hypr/scripts/move-workspace 7
-bind = $mainMod SHIFT, 8, exec, ~/.config/hypr/scripts/move-workspace 8
-bind = $mainMod SHIFT, 9, exec, ~/.config/hypr/scripts/move-workspace 9
-
-# Move/resize windows with mainMod + LMB/RMB and dragging
-bindm = $mainMod, mouse:272, movewindow
-bindm = $mainMod, mouse:273, resizewindow
