feat: add powermenu and launcher for hyprland

--- a/config/hypr/lib/keybinds.conf
+++ b/config/hypr/lib/keybinds.conf
@@ -41,8 +41,8 @@ bind = $mainMod SHIFT, 9, exec, hyprctl dispatch movetoworkspace 9 ; eww update 
 # Launchers
 
 bind = $mainMod, Return, exec, foot
-bind = $mainMod, D, exec, wofi --show drun --conf $wofiConfig/config --style $wofiConfig/style.css
-
+bind = $mainMod, D, exec, ~/.config/hypr/config/rofi/launcher/launcher.sh
+bind = $mainMod, X, exec, ~/.config/hypr/config/rofi/powermenu/powermenu.sh
 
 # Levels control ( Volume, brightness...)
 
