feat: new bar for hyprland

--- a/config/hypr/hyprpaper.conf
+++ b/config/hypr/hyprpaper.conf
@@ -1,3 +1,10 @@
+# Preload all the wallpapers that will be used
+
+preload=~/.config/hypr/assets/wallpapers/wallhaven-4979w8.png
 preload=~/.config/hypr/assets/wallpapers/wallhaven-3lwkmv.jpg
+preload=~/.config/hypr/assets/wallpapers/wallhaven-we15j6.jpg
+preload=~/.config/hypr/assets/wallpapers/wallpaper.jpg
+
+# Set them as wallpapers (duh)
 
 wallpaper=,~/.config/hypr/assets/wallpapers/wallhaven-3lwkmv.jpg
