--- a/config/hypr/lib/theming/decorations.conf
+++ b/config/hypr/lib/theming/decorations.conf
@@ -2,9 +2,9 @@ general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
     gaps_in = 5
-    gaps_out = 20
+    gaps_out = 13
     border_size = 2
-    col.active_border = rgba(2A33FFFF) rgba(FF3B99ff) 90deg
+    col.active_border = rgba(DFC5FEFF)
     col.inactive_border = rgba(595959aa)
 
     layout = dwindle
