--- a/config/hypr/lib/keybinds.conf
+++ b/config/hypr/lib/keybinds.conf
@@ -16,33 +16,27 @@ bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
 # Switch workspaces with mainMod + [0-9]
-bind = $mainMod, 1, exec, hyprctl dispatch workspace 1 ; eww update active-tag=1 --config $ewwConfig
-bind = $mainMod, 2, exec, hyprctl dispatch workspace 2 ; eww update active-tag=2 --config $ewwConfig
-bind = $mainMod, 3, exec, hyprctl dispatch workspace 3 ; eww update active-tag=3 --config $ewwConfig
-bind = $mainMod, 4, exec, hyprctl dispatch workspace 4 ; eww update active-tag=4 --config $ewwConfig
-bind = $mainMod, 5, exec, hyprctl dispatch workspace 5 ; eww update active-tag=5 --config $ewwConfig
-bind = $mainMod, 6, exec, hyprctl dispatch workspace 6 ; eww update active-tag=6 --config $ewwConfig
-bind = $mainMod, 7, exec, hyprctl dispatch workspace 7 ; eww update active-tag=7 --config $ewwConfig
-bind = $mainMod, 8, exec, hyprctl dispatch workspace 8 ; eww update active-tag=8 --config $ewwConfig
-bind = $mainMod, 9, exec, hyprctl dispatch workspace 9 ; eww update active-tag=9 --config $ewwConfig
+bind = $mainMod, 1, exec, hyprctl dispatch workspace 1 ; eww update active-workspace=1 --config $ewwConfig
+bind = $mainMod, 2, exec, hyprctl dispatch workspace 2 ; eww update active-workspace=2 --config $ewwConfig
+bind = $mainMod, 3, exec, hyprctl dispatch workspace 3 ; eww update active-workspace=3 --config $ewwConfig
+bind = $mainMod, 4, exec, hyprctl dispatch workspace 4 ; eww update active-workspace=4 --config $ewwConfig
+bind = $mainMod, 5, exec, hyprctl dispatch workspace 5 ; eww update active-workspace=5 --config $ewwConfig
+bind = $mainMod, 6, exec, hyprctl dispatch workspace 6 ; eww update active-workspace=6 --config $ewwConfig
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
 
-bind = $mainMod SHIFT, 1, exec, hyprctl dispatch movetoworkspace 1 ; eww update active-tag=1 --config $ewwConfig
-bind = $mainMod SHIFT, 2, exec, hyprctl dispatch movetoworkspace 2 ; eww update active-tag=2 --config $ewwConfig
-bind = $mainMod SHIFT, 3, exec, hyprctl dispatch movetoworkspace 3 ; eww update active-tag=3 --config $ewwConfig
-bind = $mainMod SHIFT, 4, exec, hyprctl dispatch movetoworkspace 4 ; eww update active-tag=4 --config $ewwConfig
-bind = $mainMod SHIFT, 5, exec, hyprctl dispatch movetoworkspace 5 ; eww update active-tag=5 --config $ewwConfig
-bind = $mainMod SHIFT, 6, exec, hyprctl dispatch movetoworkspace 6 ; eww update active-tag=6 --config $ewwConfig
-bind = $mainMod SHIFT, 7, exec, hyprctl dispatch movetoworkspace 7 ; eww update active-tag=7 --config $ewwConfig
-bind = $mainMod SHIFT, 8, exec, hyprctl dispatch movetoworkspace 8 ; eww update active-tag=8 --config $ewwConfig
-bind = $mainMod SHIFT, 9, exec, hyprctl dispatch movetoworkspace 9 ; eww update active-tag=9 --config $ewwConfig
+bind = $mainMod SHIFT, 1, exec, hyprctl dispatch movetoworkspace 1 ; eww update active-workspace=1 --config $ewwConfig
+bind = $mainMod SHIFT, 2, exec, hyprctl dispatch movetoworkspace 2 ; eww update active-workspace=2 --config $ewwConfig
+bind = $mainMod SHIFT, 3, exec, hyprctl dispatch movetoworkspace 3 ; eww update active-workspace=3 --config $ewwConfig
+bind = $mainMod SHIFT, 4, exec, hyprctl dispatch movetoworkspace 4 ; eww update active-workspace=4 --config $ewwConfig
+bind = $mainMod SHIFT, 5, exec, hyprctl dispatch movetoworkspace 5 ; eww update active-workspace=5 --config $ewwConfig
+bind = $mainMod SHIFT, 6, exec, hyprctl dispatch movetoworkspace 6 ; eww update active-workspace=6 --config $ewwConfig
 
 # Launchers
 
 bind = $mainMod, Return, exec, foot
-bind = $mainMod, D, exec, ~/.config/hypr/config/rofi/launcher/launcher.sh
-bind = $mainMod, X, exec, ~/.config/hypr/config/rofi/powermenu/powermenu.sh
+bind = $mainMod, D, exec, ~/.config/hypr/config/rofi/bin/launcher
+bind = $mainMod, X, exec, ~/.config/hypr/config/rofi/bin/powermenu
 
 # Levels control ( Volume, brightness...)
 
