feat: begin some changes with config

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -17,4 +17,4 @@ source = ./lib/keybinds.conf
 source = ./lib/theming/default.conf
 
 exec-once = hyprpaper
-exec-once = $ewwConfig/bin/init
+exec-once = eww open sidebar -c $ewwConfig
