--- a/config/hypr/lib/keybinds.conf
+++ b/config/hypr/lib/keybinds.conf
@@ -47,3 +47,7 @@ binde = $mainMod, F11, exec, pamixer --increase 5
 # Change device brightness
 binde = $mainMod, F3, exec, brightnessctl set 5%-
 binde = $mainMod, F4, exec, brightnessctl set +5%
+
+bind = ,Print, exec, hyprshot -m region --filename screenshots/$(date +%Y-%m-%d_%H-%m-%s).jpg --clipboard-only
+bind = SHIFT, Print, exec, hyprshot -m window --filename screenshots/$(date +%Y-%m-%d_%H-%m-%s).jpg --clipboard-only
+bind = $mainMod SHIFT, Print, exec, hyprshot -m output --filename screenshots/$(date +%Y-%m-%d_%H-%m-%s).jpg --clipboard-only
