feat: change some hypr configs

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -1,20 +1,54 @@
 # Variables
 
 $mainMod = SUPER
-$ewwConfig = ~/.config/hypr/config/eww
-$wofiConfig = ~/.config/hypr/config/wofi
+$config = ~/.config
+$hyprConfig = $config/hypr
+$ewwConfig = $hyprConfig/config/eww
+$dunstConfig = $hyprConfig/config/dunst/dunstrc
+$termCommand = kitty --single-instance
 
-# See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,preferred,auto,auto
+# Set the gaps dynamically ( Perfectionism... )
+# We were this close to perfection ( 1px ).
 
-# Hardware config
-source = ./lib/input.conf
+# Note: can't use this yet. Hyprland seems to take
+# the value literally and doesn't actually run the command to get
+# the program output.
 
-# Keybinds
-source = ./lib/keybinds.conf
+# $gapsIn = "$(maiden monitor height -p 1)"
+# $gapsOut = "$(maiden monitor height -p 2)"
 
-# Theming
-source = ./lib/theming/default.conf
+exec = hyprctl keyword general:gaps_in "$(maiden monitor height -p 1)"
+exec = hyprctl keyword general:gaps_out "$(maiden monitor height -p 2)"
+
+# Set the theme for gtk ( Hacky )
+
+$gtkTheme="$(grep 'gtk-theme-name' "$HOME/.config/gtk-3.0/settings.ini" | sed 's/.*\s*=\s*//')"
+$iconTheme="$(grep 'gtk-icon-theme-name' "$HOME/.config/gtk-3.0/settings.ini" | sed 's/.*\s*=\s*//')"
+$cursorTheme="$(grep 'gtk-cursor-theme-name' "$HOME/.config/gtk-3.0/settings.ini" | sed 's/.*\s*=\s*//')"
+
+exec = configure-gtk gtk $gtkTheme
+exec = configure-gtk icon $iconTheme
+exec = configure-gtk cursor $cursorTheme
+
+# Config includes
+ # Monitors
+ monitor=,preferred,auto,auto
+ 
+ # Hardware config
+ source = $hyprConfig/lib/input.conf
+ 
+ # Rules
+ source = $hyprConfig/lib/rules.conf
+ 
+ # Keybinds
+ source = $hyprConfig/lib/keybinds.conf
+ 
+ # Theming
+ source = $hyprConfig/lib/theming/default.conf
+
+
+# Autostart
 
 exec-once = hyprpaper
+exec-once = dunst -config $dunstConfig
 exec-once = eww open sidebar -c $ewwConfig
