--- a/config/hypr/lib/input.conf
+++ b/config/hypr/lib/input.conf
@@ -1,24 +1,17 @@
-# Configure the inputs for the window manager
-
 input {
+    # You are coming to brazil.
     kb_layout = br
-    kb_variant =
-    kb_model =
-    kb_options =
-    kb_rules =
     
     # Set the keyboard for a good repeat rate
     repeat_rate = 50
     repeat_delay = 400
 
-    # Focus follow mouse
-    follow_mouse = 1
+    # Focus follow mouse is annoying.
+    follow_mouse = 0
 
     # Set the touchpad to use the superior way of scrolling
     touchpad {
         natural_scroll = yes
     }
-
-    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 }
 
