--- a/config/hypr/lib/theming/default.conf
+++ b/config/hypr/lib/theming/default.conf
@@ -1,10 +1,11 @@
+# The colorscheme for hyprland
+source = ./color.conf
 
 # The animations for hyprland
-source = ./animations.conf
+# Everything related to that should go in this file.
+source = ./animation.conf
 
-# General config:
-# borders and etc
-source = ./decorations.conf
+# The decorations for hyprland
+# Things like border width, shadows and etc should be here.
+source = ./decoration.conf
 
-# Misc
-source ./misc.conf
