--- a/config/hypr/lib/keybinds.conf
+++ b/config/hypr/lib/keybinds.conf
@@ -1,9 +1,7 @@
 # WM Controls
 
-bind = $mainMod, C, killactive, 
 bind = $mainMod, F, fullscreen
-bind = $mainMod SHIFT, Q, exit, 
-bind = $mainMod, Space, togglefloating, 
+bind = $mainMod, C, killactive 
 
 # Move focus with vim binds
 bind = $mainMod, h, movefocus, l
@@ -16,25 +14,25 @@ bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
 # Switch workspaces with mainMod + [0-9]
-bind = $mainMod, 1, exec, hyprctl dispatch workspace 1 ; eww update active-workspace=1 --config $ewwConfig
-bind = $mainMod, 2, exec, hyprctl dispatch workspace 2 ; eww update active-workspace=2 --config $ewwConfig
-bind = $mainMod, 3, exec, hyprctl dispatch workspace 3 ; eww update active-workspace=3 --config $ewwConfig
-bind = $mainMod, 4, exec, hyprctl dispatch workspace 4 ; eww update active-workspace=4 --config $ewwConfig
-bind = $mainMod, 5, exec, hyprctl dispatch workspace 5 ; eww update active-workspace=5 --config $ewwConfig
-bind = $mainMod, 6, exec, hyprctl dispatch workspace 6 ; eww update active-workspace=6 --config $ewwConfig
+bind = $mainMod, 1, exec, hyprctl dispatch workspace 1
+bind = $mainMod, 2, exec, hyprctl dispatch workspace 2
+bind = $mainMod, 3, exec, hyprctl dispatch workspace 3
+bind = $mainMod, 4, exec, hyprctl dispatch workspace 4
+bind = $mainMod, 5, exec, hyprctl dispatch workspace 5
+bind = $mainMod, 6, exec, hyprctl dispatch workspace 6
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
 
-bind = $mainMod SHIFT, 1, exec, hyprctl dispatch movetoworkspace 1 ; eww update active-workspace=1 --config $ewwConfig
-bind = $mainMod SHIFT, 2, exec, hyprctl dispatch movetoworkspace 2 ; eww update active-workspace=2 --config $ewwConfig
-bind = $mainMod SHIFT, 3, exec, hyprctl dispatch movetoworkspace 3 ; eww update active-workspace=3 --config $ewwConfig
-bind = $mainMod SHIFT, 4, exec, hyprctl dispatch movetoworkspace 4 ; eww update active-workspace=4 --config $ewwConfig
-bind = $mainMod SHIFT, 5, exec, hyprctl dispatch movetoworkspace 5 ; eww update active-workspace=5 --config $ewwConfig
-bind = $mainMod SHIFT, 6, exec, hyprctl dispatch movetoworkspace 6 ; eww update active-workspace=6 --config $ewwConfig
+bind = $mainMod SHIFT, 1, exec, hyprctl dispatch movetoworkspace 1
+bind = $mainMod SHIFT, 2, exec, hyprctl dispatch movetoworkspace 2
+bind = $mainMod SHIFT, 3, exec, hyprctl dispatch movetoworkspace 3
+bind = $mainMod SHIFT, 4, exec, hyprctl dispatch movetoworkspace 4
+bind = $mainMod SHIFT, 5, exec, hyprctl dispatch movetoworkspace 5
+bind = $mainMod SHIFT, 6, exec, hyprctl dispatch movetoworkspace 6
 
 # Launchers
 
-bind = $mainMod, Return, exec, foot
+bind = $mainMod, Return, exec, $termCommand
 bind = $mainMod, D, exec, ~/.config/hypr/config/rofi/bin/launcher
 bind = $mainMod, X, exec, ~/.config/hypr/config/rofi/bin/powermenu
 
