feat: keep moving towards new config

--- a/config/hypr/lib/theming/colors.conf
+++ b/config/hypr/lib/theming/colors.conf
@@ -1,8 +1,8 @@
 
 # Primary colors.
 # Will be used anywhere from borders to accents.
-$primaryColor = 81CEFE
-$secondaryColor = 81CEFE
+$primaryColor = A04F12
+$secondaryColor = A04F12
 
 # Secondary colors.
 # Will be used anywhere that needs theming, but no emphasis.
