--- a/config/hypr/lib/theming/default.conf
+++ b/config/hypr/lib/theming/default.conf
@@ -1,11 +1,10 @@
 # The colorscheme for hyprland
-source = ./color.conf
+source = ./colors.conf
 
 # The animations for hyprland
 # Everything related to that should go in this file.
-source = ./animation.conf
+source = ./animations.conf
 
 # The decorations for hyprland
 # Things like border width, shadows and etc should be here.
-source = ./decoration.conf
-
+source = ./decorations.conf
