--- a/config/hypr/lib/input.conf
+++ b/config/hypr/lib/input.conf
@@ -7,11 +7,24 @@ input {
     repeat_delay = 400
 
     # Focus follow mouse is annoying.
+    # But it is kinda useful if you have muultiple
+    # monitors.
     follow_mouse = 0
 
     # Set the touchpad to use the superior way of scrolling
     touchpad {
+        tap-and-drag = yes
         natural_scroll = yes
     }
-}
 
+   # This seems useful.
+   # But where do i put it?
+   #  workspace_swipe = true
+   #  workspace_swipe_fingers = 3
+   #  workspace_swipe_distance = 400
+
+
+
+
+
+}
