--- a/images.toml
+++ b/images.toml
@@ -12,3 +12,11 @@
 [eternity]
 systems = ["x86_64-linux"]
 format = "iso"
+
+[bootstrap]
+systems = [
+  "aarch64-linux",
+  "x86_64-linux",
+]
+format = "install-iso"
+nixpkgs-channel = "nixos-unstable-small"
