feat: change some things, start using github actions

--- a/images.toml
+++ b/images.toml
@@ -13,10 +13,8 @@
 systems = ["x86_64-linux"]
 format = "iso"
 
+
 [bootstrap]
-systems = [
-  "aarch64-linux",
-  "x86_64-linux",
-]
+systems = ["aarch64-linux", "x86_64-linux"]
 format = "install-iso"
 nixpkgs-channel = "nixos-unstable-small"
