feat: new fonts, change how users are created

--- a/images.toml
+++ b/images.toml
@@ -17,4 +17,4 @@ format = "iso"
 [bootstrap]
 systems = ["aarch64-linux", "x86_64-linux"]
 format = "install-iso"
-nixpkgs-channel = "nixos-unstable-small"
+nixpkgs-channel = "nixos-unstable"
