feat: keep changing hypr, change some

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -31,24 +31,25 @@ exec = configure-gtk icon $iconTheme
 exec = configure-gtk cursor $cursorTheme
 
 # Config includes
- # Monitors
- monitor=,preferred,auto,auto
- 
- # Hardware config
- source = $hyprConfig/lib/input.conf
- 
- # Rules
- source = $hyprConfig/lib/rules.conf
- 
- # Keybinds
- source = $hyprConfig/lib/keybinds.conf
- 
- # Theming
- source = $hyprConfig/lib/theming/default.conf
+#
+# Monitors
+monitor=,preferred,auto,auto
+
+# Hardware config
+source = $hyprConfig/lib/input.conf
+
+# Rules
+source = $hyprConfig/lib/rules.conf
+
+# Keybinds
+source = $hyprConfig/lib/keybinds.conf
+
+# Theming
+source = $hyprConfig/lib/theming/default.conf
 
 
 # Autostart
 
 exec-once = hyprpaper
 exec-once = dunst -config $dunstConfig
-exec-once = ~/.config/eww/scripts/init
+exec-once = eww -c $ewwConfig open bar
