--- a/config/hypr/lib/rules.conf
+++ b/config/hypr/lib/rules.conf
@@ -5,8 +5,11 @@ windowrulev2 = workspace 1, class:^(kitty)$
 windowrulev2 = workspace 1, class:^(wezterm)$
 
 # Coding
+windowrulev2 = workspace 2, class:^(Code)$
+windowrulev2 = workspace 2, class:^(Codium)$
 windowrulev2 = workspace 2, class:^(code-url-handler)$
 windowrulev2 = workspace 2, class:^(codium-url-handler)$
+
 
 
 # Browsers
