--- a/config/hypr/lib/theming/decorations.conf
+++ b/config/hypr/lib/theming/decorations.conf
@@ -14,9 +14,10 @@ general {
 # Sorry, not sorry.
 # I don't really like the logo.
 # Makes me feel like a weeb.
-misc {
-     disable_hyprland_logo = true
-}    disable_spash_rendering = true
+# misc {
+#      disable_hyprland_logo = true
+#      disable_spash_rendering = true
+# }    
 
 decoration {
     # Round corners
@@ -24,7 +25,7 @@ decoration {
 
     # Dim inacitve windows.
     # Makes it easier to see what's focused or not.
-    inactive_opacity = 0.8
+    # inactive_opacity = 0.8
 
     # Blur is always nice.
     # Is it worth the battery, though?
