--- a/.github/workflows/builds/packages.yml
+++ b/.github/workflows/builds/packages.yml
@@ -1,4 +1,4 @@
-name: "Cache outputs"
+name: "builds"
 on:
   push:
     branches:
@@ -14,13 +14,7 @@ jobs:
         with:
           extra-conf: |
             keep-going = true
-      - name: Prepare push to binary cache
-        uses: cachix/cachix-action@v12
-        if: ${{ github.ref == 'refs/heads/master' }}
-        with:
-          name: foo-dogsquared
-          authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
-      - name: Build custom packages
+      - name: packages
         run: nix build -f ./pkgs --impure
         env:
           NIXPKGS_ALLOW_UNFREE: "1"
