--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,8 +1,10 @@
-name: "Update flake inputs"
+name: "update"
+
 on:
   workflow_dispatch:
   schedule:
     - cron: '0 0 * * 5' # Every week on Friday.
+
 jobs:
   update:
     runs-on: ubuntu-latest
@@ -14,7 +16,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: DeterminateSystems/nix-installer-action@v5
-      - name: Update flake inputs
+      - name: inputs
         run: |
           nix flake update --commit-lock-file --commit-lockfile-summary "flake.lock: update inputs"
         env:
@@ -22,12 +24,9 @@ jobs:
           GIT_AUTHOR_EMAIL: github-actions[bot]@users.noreply.github.com
           GIT_COMMITTER_NAME: github-actions[bot]
           GIT_COMMITTER_EMAIL: github-actions[bot]@users.noreply.github.com
-      - name: Build custom packages
-        run: nix build --dry-run --impure --file ./pkgs
-      - name: Build NixOS configurations
-        run: nix build --dry-run --impure .#images.x86_64-linux.{eternity,bootstrap}
-      - name: Push changes to remote
+      - name: remote
         run: |
           git remote remove origin
           git remote add origin https://${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
           git push --set-upstream origin master
+
