fix: actions run event

--- a/.github/workflows/iso.yml
+++ b/.github/workflows/iso.yml
@@ -2,9 +2,8 @@ name: "iso"
 on:
   push:
     branches:
-      - master
+      - main
     paths-ignore:
-      - docs/
 jobs:
   build-iso:
     strategy:
