fix: add docs to action ignore

--- a/.github/workflows/packages.yml
+++ b/.github/workflows/packages.yml
@@ -3,7 +3,8 @@ on:
   push:
     branches:
       - main
-      - staging
+    paths-ignore:
+      - docs/
 jobs:
   build-custom-packages:
     runs-on: ubuntu-latest
