fix: hardware configuration issues for hosts, glitch in zsh shell

--- a/images.toml
+++ b/images.toml
@@ -15,6 +15,12 @@ systems = [
 ]
 format = "iso"
 
+[serenity]
+systems = [
+  "x86_64-linux"
+]
+format = "iso"
+
 
 [bootstrap]
 systems = [
@@ -28,4 +34,4 @@ systems = [
   "x86_64-linux",
 ]
 format = "install-iso"
-
+nixpkgs-channel = "nixos-unstable-small"
