feat: some major changes

--- a/images.toml
+++ b/images.toml
@@ -9,27 +9,13 @@
 # Take note, any images with the "iso" format is essentially made to be
 # deployed somewhere (e.g., desktop, homelab server, VPS).
 
-[eternity]
+[tokyo]
 systems = [
   "x86_64-linux"
 ]
 format = "iso"
-
-[serenity]
-systems = [
-  "x86_64-linux"
-]
-format = "iso"
-
 
 [bootstrap]
-systems = [
-  "x86_64-linux",
-]
-format = "install-iso"
-nixpkgs-channel = "nixos-unstable-small"
-
-[graphical-installer]
 systems = [
   "x86_64-linux",
 ]
