--- a/users.toml
+++ b/users.toml
@@ -2,5 +2,7 @@
 # of the users defined here should correspond to one of the home-manager users
 # at `./users/home-manager/`.
 
-[fushi]
-systems = ["x86_64-linux"]
+[enmei]
+systems = [
+    "x86_64-linux"
+]
