--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,5 +1,4 @@
-name: "update"
-
+name: "Update flake inputs"
 on:
   workflow_dispatch:
   schedule:
@@ -10,12 +9,13 @@ jobs:
     env:
       NIXPKGS_ALLOW_BROKEN: "1"
       NIXPKGS_ALLOW_UNFREE: "1"
+      NIXPKGS_ALLOW_INSECURE: "1"
     permissions:
       contents: write
     steps:
       - uses: actions/checkout@v4
       - uses: DeterminateSystems/nix-installer-action@v6
-      - name: inputs
+      - name: Update flake inputs
         run: |
           nix flake update --commit-lock-file --commit-lockfile-summary "flake.lock: update inputs"
         env:
@@ -23,9 +23,12 @@ jobs:
           GIT_AUTHOR_EMAIL: github-actions[bot]@users.noreply.github.com
           GIT_COMMITTER_NAME: github-actions[bot]
           GIT_COMMITTER_EMAIL: github-actions[bot]@users.noreply.github.com
-      - name: remote
+      - name: Build custom packages
+        run: nix build --dry-run --impure --file ./pkgs
+      - name: Build NixOS configurations
+        run: nix build --dry-run --impure .#images.x86_64-linux.{ni,plover,bootstrap}
+      - name: Push changes to remote
         run: |
           git remote remove origin
           git remote add origin https://${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
           git push --set-upstream origin master
-
