--- a/.github/workflows/flakehub-push.yml
+++ b/.github/workflows/flakehub-push.yml
@@ -14,6 +14,6 @@ jobs:
       - uses: "DeterminateSystems/nix-installer-action@main"
       - uses: "DeterminateSystems/flakehub-push@main"
         with:
-          name: "diegofariasm/nixos"
+          name: "baldur/nixos"
           rolling: true
           visibility: "public"
