--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
         uses: cachix/cachix-action@v14
         if: ${{ github.ref == 'refs/heads/main' }}
         with:
-          name: diegofarias
+          name: yggdrasil
           authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
       - name: Build custom packages
         run: nix build -f ./pkgs --impure
