--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,21 +9,20 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: DeterminateSystems/nix-installer-action@v10
-        with:
-          extra-conf: |
-            keep-going = true
+      - uses: DeterminateSystems/nix-installer-action@75ffa7fc743135e1db864b699d78402ccc8ed988
       - uses: DeterminateSystems/magic-nix-cache-action@v4
-      - name: Prepare push to binary cache
+      - uses: DeterminateSystems/flake-checker-action@v7
+      - name: cache
         uses: cachix/cachix-action@v14
         if: ${{ github.ref == 'refs/heads/main' }}
         with:
           name: yggdrasil
           authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
-      - name: Build custom packages
-        run: nix build -f ./pkgs --impure
+      - name: build
         env:
           NIXPKGS_ALLOW_UNFREE: "1"
+        run: |
+          nix build --accept-flake-config --file ./pkgs --impure
   iso:
     strategy:
       matrix:
@@ -32,15 +31,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: DeterminateSystems/nix-installer-action@v10
+      - uses: DeterminateSystems/nix-installer-action@75ffa7fc743135e1db864b699d78402ccc8ed988
       - uses: DeterminateSystems/magic-nix-cache-action@v4
-      - name: Build ISO
-        run: |
-          nix build .#images.${{ matrix.arch }}.bootstrap-install-iso --impure --out-link iso-result
+      - uses: DeterminateSystems/flake-checker-action@v7
+      - name: bootstrap
         env:
           NIXPKGS_ALLOW_BROKEN: "1"
           NIXPKGS_ALLOW_UNFREE: "1"
-      - name: Create release
+        run: |
+          nix build --accept-flake-config .#images.${{ matrix.arch }}.bootstrap-install-iso --impure --out-link iso-result
+      - name: release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
