--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -6,29 +6,31 @@ on:
 jobs:
   update:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     env:
       NIXPKGS_ALLOW_BROKEN: "1"
       NIXPKGS_ALLOW_UNFREE: "1"
       NIXPKGS_ALLOW_INSECURE: "1"
-    permissions:
-      contents: write
     steps:
       - uses: actions/checkout@v4
-      - uses: DeterminateSystems/nix-installer-action@v10
+      - uses: DeterminateSystems/nix-installer-action@75ffa7fc743135e1db864b699d78402ccc8ed988
+      - uses: DeterminateSystems/magic-nix-cache-action@v4
+      - uses: DeterminateSystems/flake-checker-action@v7
       - name: inputs
-        run: |
-          nix flake update --commit-lock-file --commit-lockfile-summary "flake.lock: update inputs"
         env:
           GIT_AUTHOR_NAME: github-actions[bot]
           GIT_AUTHOR_EMAIL: github-actions[bot]@users.noreply.github.com
           GIT_COMMITTER_NAME: github-actions[bot]
           GIT_COMMITTER_EMAIL: github-actions[bot]@users.noreply.github.com
+        run: |
+          nix flake update --commit-lock-file --commit-lockfile-summary "flake.lock: update inputs"
       - name: Build custom packages
-        run: nix build --dry-run --impure --file ./pkgs
+        run: nix build --accept-flake-config --dry-run --impure --file ./pkgs
       - name: Build NixOS configurations
-        run: nix build --dry-run --impure .#images.x86_64-linux.{ni,plover,bootstrap}
+        run: nix build --accept-flake-config --dry-run --impure .#images.x86_64-linux.{asgard,bootstrap-install-iso,graphical-installer-install-iso-graphical}
       - name: Push changes to remote
         run: |
           git remote remove origin
           git remote add origin https://${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
-          git push --set-upstream origin master
+          git push --set-upstream origin main
