--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,10 +1,7 @@
 name: "check"
 on:
-  pull_request:
-  push:
-    branches:
-      - main
-      - staging
+  - pull_request
+  - push
 jobs:
   outputs:
     runs-on: ubuntu-latest
